# autocalib-sensor-extrinsics

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
autocalib-gui/: CMainWindow.cpp  CMainWindow.h  CMainWindow.ui  CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
autocalib-gui/observation_tree/: CObservationTreeItem.cpp  CObservationTreeItem.h  CObservationTreeModel.cpp  CObservationTreeModel.h
calib_core/: CMakeLists.txt
calib_core/include/: calib_core.h
cmake_modules/: script_MRPT.cmake
config_files/: app_config.ini  app_config_bk.ini  app_config_checkerboard.ini  app_config_livingroom.ini  calibConfig-backup.ini
core/: CLine.h  CMakeLists.txt  CObservationTree.cpp  CObservationTree.h  CObservationTreeItem.cpp  CObservationTreeItem.h  CPlane.h  CPlanes.h  CUtils.h  Utils.h
core/calib_solvers/: CCalibFromLines.cpp  CCalibFromLines.h  CCalibFromPlanes.cpp  CCalibFromPlanes.h  CExtrinsicCalib.cpp  CExtrinsicCalib.h  CLineMatching.cpp  CLineMatching.h  CPlaneMatching.cpp  CPlaneMatching.h  TCalibFromLinesParams.h  TCalibFromPlanesParams.h  TExtrinsicCalibParams.h  TPlaneMatchingParams.h  TSolverResult.h  calib_from_planes3D.cpp  calib_from_planes3D.h  extrinsic_calib.cpp  extrinsic_calib.h
core/include/calib_solvers/: CPlaneMatching.h  CPlaneMatchingParams.h
core/include/utils/: utils.h
core/src/calib_solvers/: CPlaneMatching.cpp
core/utils/: CObserver.h  CPlanes.cpp  CPlanes.h  CPlanesObserver.h  CSubscriber.h  CTextObserver.h  correspondences.cpp  planes.cpp  planes.h
doc/: Doxyfile  bibliography.bib
examples/: CMakeLists.txt  example1.cpp
gui/: CMainWindow.cpp  CMainWindow.h  CMainWindow.ui  CMakeLists.txt  autocalib-gui.pro
gui/config/: CCalibConfig.cpp  CCalibConfig.h  CCalibConfig.ui  CCalibFromLinesConfig.cpp  CCalibFromLinesConfig.h  CCalibFromLinesConfig.ui  CCalibFromPlanesConfig.cpp  CCalibFromPlanesConfig.h  CCalibFromPlanesConfig.ui  CLineMatchingConfig.cpp  CLineMatchingConfig.h  CLineMatchingConfig.ui  CPlaneConfig.cpp  CPlaneConfig.h  CPlaneConfig.ui  CPlaneMatchingConfig.cpp  CPlaneMatchingConfig.h  CPlaneMatchingConfig.ui
gui/core_gui/: CCalibFromLinesGui.cpp  CCalibFromLinesGui.h  CCalibFromPlanesGui.cpp  CCalibFromPlanesGui.h
gui/core_wrappers/: CCalibFromLinesWrapper.cpp  CCalibFromLinesWrapper.h  CCalibFromPlanesWrapper.cpp  CCalibFromPlanesWrapper.h
gui/interfaces/: CCorrespLinesObserver.h  CCorrespPlanesObserver.h  CLinesObserver.h  CPlanesObserver.h  CRtObserver.h  CTextObserver.h
gui/observation_tree/: CObservationTreeGui.cpp  CObservationTreeGui.h  CObservationTreeItem.cpp  CObservationTreeItem.h  CObservationTreeModel.cpp  CObservationTreeModel.h
gui/viewer/: CViewerContainer.cpp  CViewerContainer.h  CViewerContainer.ui  TViewerBuffer.h
gui/viewer_container/: CViewerContainer.cpp  CViewerContainer.h  CViewerContainer.ui
test/: CMakeLists.txt  test1.cpp
